--- a/untitled1/src/Homepage/Homepage.css
+++ b/untitled1/src/Homepage/Homepage.css
@@ -117,6 +117,10 @@ figcaption {
     text-decoration: none;
 }
 
+.w-form{
+    float: right;
+}
+
 .button:hover {
     background-color: #333;
 }
