--- a/untitled1/src/Homepage/Homepage.css
+++ b/untitled1/src/Homepage/Homepage.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     background-color: #f0f0f0;
     font-family: Lato, sans-serif;
     color: #333;
@@ -878,4 +878,4 @@ html.w-mod-js *[data-ix="scale-on-scroll"] {
     .blog-page-image {
         height: 210px;
     }
-}
+} */
