--- a/untitled1/src/Login/Login.css
+++ b/untitled1/src/Login/Login.css
@@ -1,4 +1,4 @@
-*{margin: 0; padding: 0px 0px 0px}
+*{margin: 0; padding: 0}
 body{
 /*Website colors:
 #5f6f6fff- gray
@@ -10,12 +10,15 @@ body{
 
 ul.list{
     list-style-type: none;
+    background: #b0c0cfff;
     text-align: left;
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-right: -50%;
+    margin: 0;
     transform: translate(-50%, -50%);
+    padding: 50px;
+    width: 250px;
 }
 
 ul.list li{
@@ -31,7 +34,6 @@ ul.list li input{
     border: none;
     border-radius: 0px;
     background-color: #e2e2e2;
-
 }
 
 ul.list li input[type='button']{
