--- a/untitled1/src/List/List.css
+++ b/untitled1/src/List/List.css
@@ -1,3 +1,31 @@
 .body{
     background-color: #f0f0f0;
+    font-family: Lato, sans-serif;
+    color: #333;
+    font-size: 14px;
+    line-height: 135%;
+}
+
+.h1{
+    margin-top: 0px;
+    margin-bottom: 15px;
+    font-size: 35px;
+    line-height: 40px;
+    font-weight: 400;
+}
+
+.h2{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: 25px;
+    line-height: 30px;
+    font-weight: 400;
+}
+
+.h3{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 30px;
+    font-weight: 400;
 }
