--- a/untitled1/src/List/List.css
+++ b/untitled1/src/List/List.css
@@ -29,3 +29,19 @@
     line-height: 30px;
     font-weight: 400;
 }
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+}
+
+.previous {
+    background-color: #888;
+    color: black;
+}
+
+.next {
+    background-color: #888;
+    color: black;
+}
