--- a/untitled1/src/Profile/Profile.css
+++ b/untitled1/src/Profile/Profile.css
@@ -4,6 +4,7 @@
     font-size: larger;
     background-color: gray;
     border: none;
+    outline: none;
 }
 .sub-header{
     background-color: gray;
@@ -25,6 +26,21 @@
     height: 50%;
     border:1px solid black;
 
+}
+
+#password{
+    display: inline-grid;
+    width: 75%;
+    height: 100%;
+    padding-top: 20px;
+    padding-left: 20px;
+
+}
+
+input{
+    margin-bottom: 10px;
+    height: 20px;
+    width: 40%;
 }
 
 #messages {
@@ -65,5 +81,6 @@
 }
 .body{
     height: 100%;
-    width: 100%;
+    margin: 0;
+    padding: 0;
 }
