--- a/untitled1/src/Profile/Profile.css
+++ b/untitled1/src/Profile/Profile.css
@@ -22,10 +22,10 @@
 }
 
 #news{
-    background-color: #549f63;
     margin: 0;
     height: 50%;
-    border:1px solid black;
+    text-align: center;
+    font-size: 20px;
 
 }
 
@@ -40,16 +40,20 @@
 
 input{
     margin-bottom: 10px;
-    height: 20px;
+    height: 30px;
     width: 40%;
 }
 
+.news-link{
+    color: #7090A0;
+
+}
+
 #messages {
-    background-color: pink;
     margin: 0;
     height: 50%;
-    border:1px solid black;
-
+    border-top: 1px solid black;
+    margin-bottom: 500px;
 }
 
 #options{
@@ -84,4 +88,30 @@ input{
     height: 100%;
     margin: 0;
     padding-top: 38px;
+}
+
+.message{
+    border: 1px solid black;
+    border-radius: 90px;
+    height: 80px;
+    line-height: 40px;
+    text-align: center;
+}
+
+.message-img{
+    height: 40px;
+    width: 40px;
+    border-radius: 90px;
+    padding-top: 6px;
+}
+
+.liked-img{
+    height: 125px;
+    width: 125px;
+    padding-left: 50px;
+    padding-bottom: 50px;
+}
+
+#liked{
+    padding-left: 10px;
 }
