--- a/untitled1/src/Profile/Profile.css
+++ b/untitled1/src/Profile/Profile.css
@@ -109,9 +109,26 @@ input{
     height: 125px;
     width: 125px;
     padding-left: 50px;
-    padding-bottom: 50px;
 }
 
 #liked{
     padding-left: 10px;
+}
+
+.media-link{
+    height: 100px;
+    width: 100px;
+    padding-left: 50px;
+}
+
+.option-button{
+    Margin-top: 26px;
+    height: 50px;
+    font-size: 15px;
+    float: right;
+    margin-left: 9px;
+    background-color: #7090a0;
+    color:white;
+    border: none;
+    outline: none;
 }
